compiler/weave_syntax/tests/data/syntax/statements/var0002.error
error: Unexpected tokens
        --> <source>:2:6
         |
       2 | var a.b.c.d : core::system::linux.off_t = 42;
         |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
       3 | let recover : UInt32 = 24;
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^
